Feature/metadata search (#1)
* Metadata for search parameters

* DAL interface search method

* Add a basic common case unit tests for DAL search

* Metadata schema for compositing primitive types

* Add documentation to proto definition of TRAC type system

* Make other metadata objects use TRAC Values

* Use new Value type in TRAC metadata service

* Type system proto updates - basic types and type descriptors

* Rename primitive.proto -> type.proto as it describes the whole type system

* Use new type.proto in API proto files

* Start sketching Java type system helpers

* Use type system helpers in metadata service

* Stub out unit tests for DAL search feature

* Unit test for metadata search term with EQ operator (single values only)

* Do not generate a wrapper class called "Object" from protobuf!

* Some work on the type system

* Add DAL read/write tests for multi valued attrs

* DAL Tests for EQ and NE operators

* Unit tests for metadata search terms with inequality operators

* Unit tests for LIKE operator

* Unit tests for IN operator

* Start doc comments for search operators

* Read / write multi-valued tag attrs

* Implement read for multi-valued attrs in the DAL for both batch and single read

* Search impl rough notes

* More search rough notes

* Search impl more rough notes

* Work on search

* Make DAL query builder use a fragment stack for terms and logical operations

* Work on metadata search

* Metadata search work

* Metadata search work

* Metadata search inequalities for integer and float

* Tidy up in search test

* Quick solution for encoding dates, date-times and decimals

* Make the type system use OffsetDateTime instead of ZonedDateTime for DATETIME values

* DAL updates:
- Microsecond precision for datetime
- Do not keep time zones in metadata attrs
- Unify attr read/write code

* Search: EQ and inequality search terms working for all types

* Do not suppor